a-deploy/util/x-example/istio.yaml
# Gateway in istio-system
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demo-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: demo-tls   # must exist in istio-system
      hosts:
        - "demo.local"
---
# VirtualService in apps
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-virtualservice
  namespace: apps
spec:
  hosts:
    - "demo.local"
  gateways:
    - istio-system/demo-gateway
  http:
    - match:
        - uri:
            prefix: /about
      route:
        - destination:
            host: info.apps.svc.cluster.local
            port:
              number: 9090
---
